fix invalid line-break on small windows size

--- a/wwwroot/styles.css
+++ b/wwwroot/styles.css
@@ -35,6 +35,7 @@ body {
 }
 
 #maincontentwrapper {
+	float: left;
 	margin-top: 4px;
 	border-radius: 10px 10px 0px 7px;
 	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.7);
